# garbage

./: .gitignore  README
ST/: ST.csv  charset.py  create_db.py  map.py  py.db  pydict.py  scim_sctc_filter_data.h  sctc.csv  sctc.py  test.py  ts.py
X11/: Makefile  test.c
algorithms/dynamic_programming/: longest_prefix.cc  subset_sum.cc  subset_sum_1.py  subset_sum_2.py  subset_sum_3.py  subset_sums.py
algorithms/sort/qsort/: qsort.cc
algorithms/strsearch/: kmpmatch.py  match.py  strsearch.py
algorithms/viterbi/: viterbi.py
algorithms/xiangnong/: main.py
android/rotation_lock/: AndroidManifest.xml
android/rotation_lock/src/org/penghuang/tools/rotationlock/: RotationLockActivity.java
boost/python/: Makefile  hello.cc  test.py
django/mysite/: settings.py  urls.py
django/mysite/polls/: admin.py  models.py  urls.py  views.py
django/phuang/helloworld/: models.py  urls.py  views.py
django/phuang/helloworld/templates/: index.html
fontforge/: fontforge.py  main.py
gdb/parser/: Makefile  makefile  mi.l  mi.y
gi/: test.py
gtk/: keyevent.py  label.py
handwrite/: character.py
ibus-pinyin/: Makefile.am  README  configure.ac  ibus-pinyin.spec.in
ibus-pinyin/data/: Makefile  Makefile.am  create_db.py  create_index.py  double.py
ibus-pinyin/icons/: Makefile.am
ibus-pinyin/po/: POTFILES.in  zh_CN.po
ibus-pinyin/setup/: ibus-pinyin-preferences.glade  ibus-setup-pinyin.in  main.py
ibus-pinyin/src/: Array.h  Bus.cc  Bus.h  Config.cc  Config.h  Database.cc  Database.h  DoublePinyinEditor.cc  DoublePinyinEditor.h  DoublePinyinTable.h  Editor.cc  Editor.h  Engine.cc  Engine.h  FullPinyinEditor.cc  FullPinyinEditor.h  HalfFullConverter.cc  HalfFullConverter.h  LookupTable.h  Main.cc  Makefile.am  Parser.cc  Parser.h  PhraseEditor.cc  PhraseEditor.h  PinYinEngine.cc  PinYinEngine.h  PinyinEditor.cc  PinyinEditor.h  PinyinEngine.cc  PinyinEngine.h  PinyinParser.cc  PinyinParser.h  Pointer.h  Property.h  SpecialTable.h  String.h  Types.h  Util.h  array.h  (+34 more)
ibus-pinyin/src/scripts/: genpytable.py
input/: evdev.py
ipc/: shm.c
keymaps/: common  convert-map.py  cs  da  de-ch  en-dv  es  fi  fr-ca  fr-ch  he  ja  ko  modifiers  nl-be  no  pl  pt  tr
kvm/: ExDict.py  kvm_config.py  kvm_config_v2.py  kvm_config_v3.py  kvm_tests.cfg  kvm_tests.cfg.old
latex/moderncv/: Makefile  phuang_classic.tex
open-phrase/: phrase.py
pinyin/: Makefile  genpy.py  main.c  pinyin.h  pinyin.l  pinyin.y  pydict.py  reverse.py
sdl/overlay/: Makefile  main.c
sizeof/: main.c  test.c
socket/: udp_send.py
socket/multicast/: udp_recv.py
stap/mem/: MemWindow.py  main.py  mem.stp  start.sh
taskman/: calendar.py  gen_data.py  settings.py  setup.py  test.py  urls.py
taskman/sched/: admin.py  models.py  urls.py  views.py
taskman/scheduler/: admin.py  models.py
taskman/templates/sched/: tasks.html
vala/: hello.vala
vala/ibus/: main.vala
xkb/: common.py  symbols.py  symbols.y
